# taboc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  clippy.yml  test.yml
mock_data/: README.md  README.md.bak
py-utils/: generate_markdown.py  pyproject.toml
src/: lib.rs  main.rs  prelude.rs
src/app/: mod.rs
src/macros/: err.rs
src/tests/: mod.rs  readme.rs
src/utils/: args.rs  data.rs  git.rs  mod.rs  toc.rs
utils/generate_markdown/: Cargo.toml
utils/generate_markdown/src/: main.rs
