[package]
name = "taboc"
version = "0.1.201"
edition = "2021"
license = "MIT"
description = "A table of contents generator for markdown documents written in Rust."

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }

[features]
default = ["git"]

git = []
