[package]
name = "taboc"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A table of contents generator for markdown documents written in Rust."

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
anyhow = { version = "1.0.95", features = ["std"] }

[features]
default = ["git"]

git = []
