[package]
name = "taboc"
version = "0.2.101"
edition = "2021"
license = "MIT"
description = "A table of contents generator for markdown documents written in Rust."

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
anyhow = { version = "1.0.95", features = ["std"] }
memmap2 = { version = "0.9.5", optional = true }

[features]
default = ["git"]

git = []

# NOTE: Not on by default. It's a bit slower to do memory mapped I/O (probably
# due to syscall overhead). This only exists as a feature for large file
# processing with minimal RAM usage. It's unlikely it'd ever be needed for most
# markdown files.
memmap2 = ["dep:memmap2"]
